--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         Iphone
                     </div>
                     <div class="des">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt incidunt iste, ipsam perspiciatis consectetur deleniti! Ad, recusandae doloribus iusto impedit ipsa, eos quam repellendus quaerat mollitia, fugiat totam ut? Iste.
+                        The iPhone is a line of smartphones designed and marketed by Apple Inc. since 2007. Over the years, the iPhone has seen numerous updates and iterations, each bringing new features, improved performance, and design changes. 
                     </div>
                     <button class="seeMore">
                         See More &#8599
@@ -75,7 +75,7 @@
                         Google Pixel
                     </div>
                     <div class="des">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt incidunt iste, ipsam perspiciatis consectetur deleniti! Ad, recusandae doloribus iusto impedit ipsa, eos quam repellendus quaerat mollitia, fugiat totam ut? Iste.
+                        The Google Pixel is a line of consumer electronic devices developed by Google that includes smartphones, tablets, and laptops. The Pixel smartphones, in particular, have gained a reputation for their excellent cameras, clean Android experience, and timely software updates.
                     </div>
                     <button class="seeMore">
                         See More &#8599
@@ -86,7 +86,7 @@
                         Google Pixel 8 Pro
                     </div>
                     <div class="des">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus doloribus reiciendis ut provident illo labore, distinctio, ducimus est sequi porro fugit rem cupiditate iste iure accusantium adipisci. Fuga, expedita recusandae?
+                        Google Pixel 8 and Pixel 8 Pro (2023): Introduced with advancements in AI capabilities, further refined design, improved displays, and even better camera technology.
                     </div>
                     <div class="specifications">
                         <div>
