--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="images/iphone.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         Iphone
