--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img src="images/google-pixel-removebg.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         Google Pixel
@@ -116,7 +116,7 @@
                 <img src="images/oneplus.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         One Plus
@@ -163,7 +163,7 @@
                 <img src="images/samsung-s23-removebg-preview.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         Samsung
@@ -210,7 +210,7 @@
                 <img src="images/samsung_z_fold-removebg.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         Samsung
@@ -257,7 +257,7 @@
                 <img src="images/nokia-removebg.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         Nokia
@@ -304,7 +304,7 @@
                 <img src="images/htc-removebg.png">
                 <div class="intro">
                     <div class="title">
-                        DESIGN SLIDER
+                        ALL PHONES
                     </div>
                     <div class="topic">
                         HTC
